Исправлены ошибки в модуле HashTable, разработан модуль Lambdas